--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
         <!-- SSO deps -->
         <version.cas.client>3.2.1</version.cas.client>
         <version.picketlink.fed>2.1.4.Final</version.picketlink.fed>
+        <org.mortbay.jetty.version>6.1.11</org.mortbay.jetty.version>
 
         <!--
         Various log4j properties for unit tests, examples:
@@ -305,6 +306,11 @@
                 <artifactId>quartz</artifactId>
                 <version>${quartz.version}</version>
             </dependency>
+            <dependency>
+		      <groupId>org.mortbay.jetty</groupId>
+		      <artifactId>jetty-util</artifactId>
+		       <version>${org.mortbay.jetty.version}</version>
+		    </dependency>
         </dependencies>
     </dependencyManagement>
 
