--- a/packaging/tomcat/pkg/pom.xml
+++ b/packaging/tomcat/pkg/pom.xml
@@ -98,23 +98,41 @@
 
 
     <!-- exo commons components with ckeditor-->
-
-      <dependency>
-          <groupId>org.exoplatform.commons</groupId>
-          <artifactId>commons-webui-component</artifactId>
-      </dependency>
-		<dependency>
+<!--      <dependency> -->
+<!-- 		<groupId>org.exoplatform.commons</groupId> -->
+<!-- 		<artifactId>exo.platform.commons.component.upgrade</artifactId> -->
+<!-- 		<version>1.1.7</version> -->
+<!-- 	  </dependency> -->
+<!--     <dependency> -->
+<!--     <groupId>org.exoplatform.commons</groupId> -->
+<!--     <artifactId>exo.platform.commons.component.product</artifactId> -->
+<!--     <version>1.1.7</version> -->
+<!--     </dependency> -->
+    <dependency>
+		<groupId>org.exoplatform.commons</groupId>
+		<artifactId>exo.platform.commons.comet.service</artifactId>
+		<version>1.1.7</version>
+	  </dependency>
+    <dependency>
+    <?rename commons-comet.war?>
+    <groupId>org.exoplatform.commons</groupId>
+    <artifactId>commons-comet-webapp</artifactId>
+    <type>war</type>
+    </dependency>
+    <dependency>
+    	<?rename commons-extension.war?>
       <groupId>org.exoplatform.commons</groupId>
-      <artifactId>commons-comet-service</artifactId>
-    	</dependency>
+      <artifactId>exo.platform.commons.extension.webapp</artifactId>
+      <version>1.1.7</version>
+       <type>war</type>
+    </dependency>
+    
       <dependency>
           <?rename CommonsResources.war?>
           <groupId>org.exoplatform.commons</groupId>
           <artifactId>commons-webui-resources</artifactId>
           <type>war</type>
       </dependency>
-
-
     <!-- Logging -->
 
     <dependency>
@@ -665,18 +683,18 @@
     </dependency>
 
     <!-- Various -->
-    <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>cometd-bayeux</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>cometd-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>jetty-util</artifactId>
-    </dependency>
+    	<dependency>
+<groupId>org.mortbay.jetty</groupId>
+<artifactId>cometd-bayeux</artifactId>
+</dependency>
+<dependency>
+<groupId>org.mortbay.jetty</groupId>
+<artifactId>cometd-api</artifactId>
+</dependency>
+<dependency>
+<groupId>org.mortbay.jetty</groupId>
+<artifactId>jetty-util</artifactId>
+</dependency>
     <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
