--- a/service/pom.xml
+++ b/service/pom.xml
@@ -46,8 +46,9 @@
       <artifactId>commons-lang</artifactId>
     </dependency>
     <dependency>
-      <groupId>ical4j</groupId>
+      <groupId>org.mnode.ical4j</groupId>
       <artifactId>ical4j</artifactId>
+      <version>1.0.5.2</version>
       <exclusions>
         <exclusion>
           <artifactId>commons-logging</artifactId>
